--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TwitchTopGames</string>
+    <string name="channels">Количество каналов: %1$d</string>
 </resources>
