adding database and handling no network error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">TwitchTopGames</string>
-    <string name="channels">Количество каналов: %1$d</string>
+    <string name="network_error">Интернет-соединение отсутствует</string>
 </resources>
